<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
            android:id="@+id/press_me_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tests_rock"
            android:layout_marginBottom="10dip"
            />

    <Button
            android:id="@+id/tracker_recent_activity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_recent_tracker_activity"
            android:layout_marginBottom="10dip"
            />

    <Button
            android:id="@+id/injected_activity_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/injected_activity"
            android:layout_marginBottom="10dip"
            />


</merge>